[package]
name = "caminus"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
rocksdb = "0.22"
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
wasmtime = "33.0.0"
